Me equivoque antes

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		</nav>
 	</header>
 	<main>
-		<section id="mainSection">
+		<section>
 			<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, tenetur quae doloremque rem voluptatem facere dolorum vel harum, neque unde eos quaerat quibusdam cum vero! Atque excepturi aspernatur dolores harum vitae cumque veniam eos doloremque porro est, fuga quod, quia beatae officiis accusamus, quidem sit non itaque? Aperiam nostrum, id. <strong>Tempora dicta, hic, eaque vero facilis nemo voluptates recusandae fuga</strong>, minima temporibus nobis magni! Amet mollitia excepturi consequatur delectus magnam ipsum est asperiores ipsa officiis, quibusdam atque ut neque, debitis ipsam? Voluptatibus.</p>
 			<img src="https://placehold.it/280" alt="">
