agregar abbr linea 24

--- a/index.html
+++ b/index.html
@@ -1,76 +1,87 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-	<meta charset="UTF-8">
-	<title>Github</title>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Montserrat:wght@400;700&display=swap">
-	<link rel="stylesheet" href="styles.css">
-</head>
-<body>
-	<header>
-		<nav>
-			<img src="https://placehold.it/100x20" alt="">
-			<a href="">Lorem</a>
-			<a href="">Ipsum</a>
-			<a href="">Dolor</a>
-			<a href="">Sit</a>
-			<a href="">Amet</a>
-		</nav>
-	</header>
-	<main>
-		<section>
-			<h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Amet, tenetur quae doloremque rem voluptatem facere dolorum vel harum, neque unde eos quaerat quibusdam cum vero! Atque excepturi aspernatur dolores harum vitae cumque veniam eos doloremque porro est, fuga quod, quia beatae officiis accusamus, quidem sit non itaque? Aperiam nostrum, id. <strong>Tempora dicta, hic, eaque vero facilis nemo voluptates recusandae fuga</strong>, minima temporibus nobis magni! Amet mollitia excepturi consequatur delectus magnam ipsum est asperiores ipsa officiis, quibusdam atque ut neque, debitis ipsam? Voluptatibus.</p>
-			<img src="https://placehold.it/280" alt="">
-			<h2>Lorem ipsum dolor sit amet, consectetur adipisicing.</h2>
-			<p>Est praesentium sapiente quos molestias cumque ea dicta voluptatum obcaecati officia tempora, sint, eum reiciendis accusantium laboriosam, aut nihil pariatur dolores, odio impedit numquam. Molestias impedit qui sed nemo illum asperiores vero sit expedita id nisi iusto recusandae voluptate animi repellendus aut, est accusantium, architecto quia fuga enim.</p>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos recusandae nisi, impedit, quos nemo sequi, aut tenetur eaque, possimus officia atque excepturi iusto. <i>Qio at, minima maiores iure inventore aut.</i></p>
-			<h3>Otro título</h3>
-			<ul class="lista">
-				<li>
-					<h2>Item 1</h2>
-					<ul>
-						<li>Item 1.1</li>
-						<li>Item 2.1</li>
-						<li>Item 3.1</li>
-					</ul>
-				</li>
-				<li>
-					<h2>Item 2</h2>
-					<ul>
-						<li>Item 1.2</li>
-						<li>Item 2.2</li>
-						<li>Item 3.2</li>
-					</ul>
-				</li>
-				<li>
-					<h2>Item 3</h2>
-					<ul>
-						<li>Item 1.3</li>
-						<li>Item 2.3</li>
-						<li>Item 3.3</li>
-					</ul>
-				</li>
-				<li>
-					<h2>Item 3</h2>
-					<ul>
-						<li>Item 1.3</li>
-						<li>Item 2.3</li>
-						<li>Item 3.3</li>
-					</ul>
-				</li>
-			</ul>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id vel doloribus modi. Iusto quidem error, labore ducimus officiis sed adipisci consectetur aspernatur dolorem inventore blanditiis quae mollitia modi aliquid eos, <u>ipsum dignissimos iste voluptate nulla.</u> Totam nostrum consequuntur eaque in hic? Animi tenetur sit nemo quae placeat ad, odio, beatae rerum libero sint eveniet laboriosam accusantium quas sed, quibusdam nobis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi facere aperiam at magnam, incidunt itaque eveniet in voluptate ipsa doloremque! Consequatur laborum necessitatibus, in hic incidunt iusto! Officia quidem repellendus sunt, ipsum dolorum amet nulla saepe. <a href="">Aspernatur beatae ut perferendis.</a>
-			<br>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet commodi atque sed quasi maxime, provident, animi necessitatibus. Eius maiores sapiente animi minima minus, eaque illum beatae deleniti expedita ullam vel, nam, dolore consectetur molestias laboriosam aperiam eveniet cupiditate, dolorum! Necessitatibus consequuntur quis dolorum, voluptates libero.</p>
-		</section>
-		<section>
-			<h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, rerum.</h2>
-			<p class="importante">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, cum sint voluptatibus, nulla distinctio obcaecati vitae, quam ipsa reprehenderit consequatur iure aliquid soluta inventore accusamus ea aut delectus ad fuga.</p>
-		</section>
-	</main>
+    <head>
+        <meta charset="UTF-8" />
+        <title>Github</title>
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Montserrat:wght@400;700&display=swap" />
+        <link rel="stylesheet" href="styles.css" />
+    </head>
+    <body>
+        <header>
+            <nav>
+                <img src="https://placehold.it/100x20" alt="" />
+                <a href="">Lorem</a>
+                <a href="">Ipsum</a>
+                <a href="">Dolor</a>
+                <a href="">Sit</a>
+                <a href="">Amet</a>
+            </nav>
+        </header>
+        <main>
+            <section>
+                <h1>Lorem ipsum dolor sit amet, consectetur adipisicing elit.</h1>
+                <p>
+                    <abbr title="este es mi cambio">Lorem ipsum dolor sit amet</abbr>, consectetur adipisicing elit. Amet, tenetur quae doloremque rem voluptatem facere dolorum vel harum, neque unde eos quaerat quibusdam cum vero! Atque excepturi aspernatur dolores harum vitae cumque veniam eos doloremque porro est,
+                    fuga quod, quia beatae officiis accusamus, quidem sit non itaque? Aperiam nostrum, id. <strong>Tempora dicta, hic, eaque vero facilis nemo voluptates recusandae fuga</strong>, minima temporibus nobis magni! Amet mollitia excepturi consequatur delectus magnam ipsum est asperiores ipsa officiis,
+                    quibusdam atque ut neque, debitis ipsam? Voluptatibus.
+                </p>
+                <img src="https://placehold.it/280" alt="" />
+                <h2>Lorem ipsum dolor sit amet, consectetur adipisicing.</h2>
+                <p>
+                    Est praesentium sapiente quos molestias cumque ea dicta voluptatum obcaecati officia tempora, sint, eum reiciendis accusantium laboriosam, aut nihil pariatur dolores, odio impedit numquam. Molestias impedit qui sed nemo illum asperiores vero sit expedita id nisi iusto recusandae voluptate animi
+                    repellendus aut, est accusantium, architecto quia fuga enim.
+                </p>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos recusandae nisi, impedit, quos nemo sequi, aut tenetur eaque, possimus officia atque excepturi iusto. <i>Qio at, minima maiores iure inventore aut.</i></p>
+                <h3>Otro título</h3>
+                <ul class="lista">
+                    <li>
+                        <h2>Item 1</h2>
+                        <ul>
+                            <li>Item 1.1</li>
+                            <li>Item 2.1</li>
+                            <li>Item 3.1</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h2>Item 2</h2>
+                        <ul>
+                            <li>Item 1.2</li>
+                            <li>Item 2.2</li>
+                            <li>Item 3.2</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h2>Item 3</h2>
+                        <ul>
+                            <li>Item 1.3</li>
+                            <li>Item 2.3</li>
+                            <li>Item 3.3</li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h2>Item 3</h2>
+                        <ul>
+                            <li>Item 1.3</li>
+                            <li>Item 2.3</li>
+                            <li>Item 3.3</li>
+                        </ul>
+                    </li>
+                </ul>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Id vel doloribus modi. Iusto quidem error, labore ducimus officiis sed adipisci consectetur aspernatur dolorem inventore blanditiis quae mollitia modi aliquid eos, <u>ipsum dignissimos iste voluptate nulla.</u> Totam nostrum consequuntur
+                    eaque in hic? Animi tenetur sit nemo quae placeat ad, odio, beatae rerum libero sint eveniet laboriosam accusantium quas sed, quibusdam nobis. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sequi facere aperiam at magnam, incidunt itaque eveniet in voluptate ipsa doloremque! Consequatur
+                    laborum necessitatibus, in hic incidunt iusto! Officia quidem repellendus sunt, ipsum dolorum amet nulla saepe. <a href="">Aspernatur beatae ut perferendis.</a> <br />Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eveniet commodi atque sed quasi maxime, provident, animi necessitatibus.
+                    Eius maiores sapiente animi minima minus, eaque illum beatae deleniti expedita ullam vel, nam, dolore consectetur molestias laboriosam aperiam eveniet cupiditate, dolorum! Necessitatibus consequuntur quis dolorum, voluptates libero.
+                </p>
+            </section>
+            <section>
+                <h2>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Explicabo, rerum.</h2>
+                <p class="importante">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cupiditate, cum sint voluptatibus, nulla distinctio obcaecati vitae, quam ipsa reprehenderit consequatur iure aliquid soluta inventore accusamus ea aut delectus ad fuga.</p>
+            </section>
+        </main>
 
-	<footer>
-		<p>Ejemplo SRL &copy; 2020 - <span>Todos los derechos reservados</span></p>
-	</footer>
-</body>
+        <footer>
+            <p>Ejemplo SRL &copy; 2020 - <span>Todos los derechos reservados</span></p>
+        </footer>
+    </body>
 </html>
